--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,10 @@
 [package]
-name = "random"
-version = "0.1.0"
+name = "ck3-player"
+version = "0.2.0"
 edition = "2021"
 
 [dependencies]
-rand = "0.8.5"
+clap = { version = "4.5.41", features = ["derive"] }
+rand = "0.9.2"
 serde = {version = "1.0.219", features = ["derive"]}
 serde_json = "1.0.140"
