--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,4 @@ edition = "2021"
 
 [dependencies]
 clap = { version = "4.5.41", features = ["derive"] }
-rand = "0.9.2"
-serde = {version = "1.0.219", features = ["derive"]}
-serde_json = "1.0.140"
+core = { path = "perso_ck3-core" }
